[gd_scene load_steps=20 format=4 uid="uid://cp845h34qu67s"]

[ext_resource type="Script" uid="uid://bhg1bit2d45d7" path="res://Main.gd" id="1_a0tk4"]
[ext_resource type="Script" uid="uid://djxdhc8v0hvm2" path="res://node_3d.gd" id="1_a202f"]
[ext_resource type="Texture2D" uid="uid://ddacjcbaohnmj" path="res://icon.svg" id="1_noarx"]
[ext_resource type="Texture2D" uid="uid://cb7e3fwcl8jv2" path="res://New Piskel (4).png" id="4_r3fl7"]
[ext_resource type="Texture2D" uid="uid://dkn1jctt7tld6" path="res://New Piskel (5).png" id="5_jka67"]
[ext_resource type="Script" uid="uid://b6508r6a2v3wc" path="res://Objects.gd" id="6_i5arm"]
[ext_resource type="Texture2D" uid="uid://d2bd2cotylpop" path="res://New Piskel (7).png" id="6_wc5p8"]
[ext_resource type="Texture2D" uid="uid://n6yy33huam27" path="res://New Piskel (8).png" id="7_jsk3o"]
[ext_resource type="Script" uid="uid://cvytypp01e6cx" path="res://ObjectTestScript.gd" id="8_4arys"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_noarx"]
size = Vector2(125, 124)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6iypd"]
texture = ExtResource("4_r3fl7")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tereu"]
texture = ExtResource("5_jka67")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_cdqbm"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6iypd")
sources/1 = SubResource("TileSetAtlasSource_tereu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jsk3o"]
texture = ExtResource("6_wc5p8")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4arys"]
texture = ExtResource("7_jsk3o")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_jka67"]
tile_size = Vector2i(128, 128)
sources/1 = SubResource("TileSetAtlasSource_4arys")
sources/0 = SubResource("TileSetAtlasSource_jsk3o")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jka67"]
texture = ExtResource("4_r3fl7")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wc5p8"]
texture = ExtResource("5_jka67")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_i5arm"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_jka67")
sources/1 = SubResource("TileSetAtlasSource_wc5p8")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_a0tk4")

[node name="Player" type="CharacterBody2D" parent="."]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_a202f")
speed = 350
gravity = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_noarx")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("1_noarx")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MainLayer" type="Node" parent="."]

[node name="C1" type="TileMapLayer" parent="MainLayer"]
scale = Vector2(0.25, 0.25)
tile_map_data = PackedByteArray("AAD8/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_cdqbm")

[node name="C2" type="TileMapLayer" parent="MainLayer"]
scale = Vector2(0.25, 0.25)
tile_map_data = PackedByteArray("AAD8/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_cdqbm")

[node name="MainObjectLayer" type="Node" parent="."]

[node name="C1" type="TileMapLayer" parent="MainObjectLayer"]
z_index = -1
scale = Vector2(0.025, 0.025)
tile_map_data = PackedByteArray("AAD8/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_jka67")
collision_enabled = false
script = ExtResource("8_4arys")

[node name="C2" type="TileMapLayer" parent="MainObjectLayer"]
modulate = Color(1, 1, 1, 0.494118)
z_index = -1
scale = Vector2(0.025, 0.025)
tile_map_data = PackedByteArray("AAD8/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_jka67")
collision_enabled = false
script = ExtResource("6_i5arm")

[node name="C3" type="TileMapLayer" parent="MainObjectLayer"]
modulate = Color(1, 1, 1, 0.494118)
z_index = -1
scale = Vector2(0.025, 0.025)
tile_map_data = PackedByteArray("AAD8/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_jka67")
collision_enabled = false
script = ExtResource("6_i5arm")

[node name="BackgroundLayer1" type="Node" parent="."]

[node name="C1" type="TileMapLayer" parent="BackgroundLayer1"]
z_index = -2
scale = Vector2(0.2, 0.2)
tile_set = SubResource("TileSet_i5arm")

[node name="BackgroundLayer2" type="Node" parent="."]

[node name="C1" type="TileMapLayer" parent="BackgroundLayer2"]
z_index = -4
scale = Vector2(0.15, 0.15)
tile_set = SubResource("TileSet_i5arm")
